# Galadril

./: .bazelignore  .bazelrc  .bazelversion  .gitignore  404.html  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  gazelle_python.yaml  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  print.html  pyproject.toml  requirements.txt  searcher-c2a407aa.js  searchindex-1a0dab2a.js  searchindex-84412a7b.js  searchindex-a040e8ba.js  searchindex-d62f6843.js  searchindex-e49698c8.js  searchindex-e92a5d26.js  toc-1a644351.js  toc-b9f63580.js  toc-c92b1cca.js  toc-e19ba8aa.js  toc.html
.github/: CODEOWNERS
.github/workflows/: bazel.yaml  dashboard.yaml  docker.yaml  docs.yml
architecture/: data_sinks.html  eru.html  intake_service.html  overview.html  vision_service.html
configuration/: connectors.html  models.html  overview.html  parsers.html  pipeline_dag.html  sources.html
database/: Dockerfile  README.md
database/docker-entrypoint-initdb.d/: 00-create-extension.sql  003-install-age.sh  003-install-extensions.sh
docs/: book.toml
docs/src/: README.md  SUMMARY.md
examples/: pipeline.yaml
front/: README.md  nuxt.config.ts  package.json  pnpm-lock.yaml
front/dashboard/: Dockerfile  nuxt.config.ts  package.json  tailwind.config.ts
front/i18n/: en-US.json
front/landing/: nuxt.config.ts  package.json  (+1 more)
machine-learning/eru/: pyproject.toml
machine-learning/eru/examples/: BUILD.bazel  military_extraction.py
machine-learning/eru/src/eru/: BUILD.bazel  __init__.py  engine.py  exceptions.py  types.py
machine-learning/eru/src/eru/extractor/: BUILD.bazel  __init__.py  gliner.py
machine-learning/eru/src/eru/logic/: BUILD.bazel  __init__.py  simple.py
machine-learning/eru/src/eru/reasoner/: BUILD.bazel  __init__.py  outlines.py
machine-learning/galadril-inference/: pyproject.toml
machine-learning/galadril-inference/examples/: BUILD.bazel  README.md  face_recognition.py  image_description.py  ocr.py  relation_extraction.py  segmentation.py  siglip.py  transcribe.py  weapons_embedding.py  weather.py
machine-learning/galadril-inference/src/galadril_inference/: BUILD.bazel  __init__.py
machine-learning/galadril-inference/src/galadril_inference/common/: BUILD.bazel  __init__.py  exceptions.py  types.py
machine-learning/galadril-inference/src/galadril_inference/core/: BUILD.bazel  __init__.py  engine.py  registry.py
machine-learning/galadril-inference/src/galadril_inference/loading/: BUILD.bazel  __init__.py  loader.py
machine-learning/galadril-inference/src/galadril_inference/models/: BUILD.bazel  __init__.py  base.py  bgem3.py  eru.py  face_recognition.py  gliner.py  got_ocr.py  grounded_sam.py  nuextract.py  owl.py  siglip.py  time_series.py  whisper.py
machine-learning/galadril-inference/src/galadril_inference/storage/: BUILD.bazel  __init__.py  local.py  s3.py
machine-learning/scribe/: BUILD.bazel  Cargo.toml  README.md  go.mod  go.sum
machine-learning/scribe/.cargo/: config.toml
machine-learning/scribe/examples/: chat.rs  economy.rs  report.rs  tikz.rs
machine-learning/scribe/src/: database.rs  engine.rs  lib.rs  ollama.rs
machine-learning/scribe/src/tools/: add_section.rs  calculator.rs  database.rs  mod.rs
machine-learning/scribe/templates/: Modelfile  report.tex  system.txt
platform/pipeline/: pyproject.toml
platform/pipeline/examples/: BUILD.bazel  load.py
platform/pipeline/src/galadril_pipeline/: BUILD.bazel  __init__.py  config.py  graph.py  parser.py
platform/pipeline/src/galadril_pipeline/models/: BUILD.bazel  __init__.py  connectors.py  pipeline.py  sources.py
platform/vision/: README.md  pyproject.toml
platform/vision/src/galadril-vision/: __init__.py  config.py
platform/vision/src/galadril-vision/common/: types.py
platform/vision/src/galadril-vision/connectors/kafka/: __init__.py  consumer.py  schemas.py
platform/vision/src/galadril-vision/connectors/postgres/: client.py  graph.py  vector.py
platform/vision/src/galadril-vision/pipeline/: runner.py  transforms.py
platform/vision/src/galadril_vision/: BUILD.bazel  __init__.py  main.py
platform/vision/src/galadril_vision/common/: BUILD.bazel  config.py  exceptions.py  types.py
platform/vision/src/galadril_vision/config/: BUILD.bazel  __init__.py  loader.py  schema.py
platform/vision/src/galadril_vision/connectors/kafka/: BUILD.bazel  __init__.py  consumer.py  schemas.py
platform/vision/src/galadril_vision/connectors/postgres/: BUILD.bazel  __init__.py  client.py  graph.py  vector.py
platform/vision/src/galadril_vision/pipeline/: BUILD.bazel  duckdb.py  executor.py  model_loader.py  runner.py  transforms.py
schemas/: BUILD.bazel
services/gateway/: BUILD.bazel  Cargo.toml  go.mod
services/gateway/src/: main.rs
services/gateway/src/adapters/: mod.rs
services/gateway/src/adapters/inbound/: mod.rs
services/gateway/src/adapters/inbound/graphql/: auth.rs  context.rs  mod.rs  schema.rs  server.rs
services/gateway/src/adapters/outbound/: mod.rs
services/gateway/src/adapters/outbound/database/: connection.rs  data_inspector.rs  data_pg.rs  entity.rs  mod.rs  policy.rs  policy_pg.rs
services/gateway/src/application/: mod.rs
services/gateway/src/application/ports/: data_inspector.rs  entity_provider.rs  mod.rs  policy_store.rs
services/gateway/src/application/usecases/: authorization.rs  data_explorer.rs  mod.rs
services/gateway/src/domain/: mod.rs
services/gateway/src/domain/database/: entity.rs  mod.rs  sink.rs
services/gateway/src/domain/security/: mod.rs  policy.rs
services/intake/: BUILD.bazel  Cargo.toml
services/intake/src/: main.rs
services/intake/src/adapters/: mod.rs
services/intake/src/adapters/spi/: mod.rs
services/intake/src/adapters/spi/kafka/: consumer.rs  mod.rs  producer.rs
services/intake/src/adapters/spi/storage/: mod.rs  s3.rs
services/intake/src/application/: mod.rs  parser.rs
services/intake/src/application/parsers/: csv_financial.rs  json_osint.rs  mod.rs  passthrough.rs
services/intake/src/domain/: config.rs  mod.rs  models.rs  ports.rs
studio/: dashboard-builder.html  overview.html
(+91 files in other folders)
