load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@pip//:requirements.bzl", "all_whl_requirements")
load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

# gazelle:exclude .venv
# gazelle:exclude target

load("@rules_uv//uv:pip.bzl", "pip_compile")

pip_compile(
    name = "generate_requirements_txt",
    args = [
        "--all-extras",
    ],
    requirements_in = "//:pyproject.toml",
    requirements_txt = "//:requirements.txt",
)

modules_mapping(
    name = "modules_map",
    include_stub_packages = True,
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "pip",
    requirements = "//:requirements.txt",
)

gazelle_binary(
    name = "gazelle_multilang",
    languages = [
        "@gazelle//language/proto",
        "@rules_python_gazelle_plugin//python",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_multilang",
)

multirun(
    name = "all",
    commands = [
        "//services/gateway:gateway",
        "//services/intake:intake",
    ],
    jobs = 0,
)

multirun(
    name = "push",
    commands = [
        "//services/intake:push",
    ],
    jobs = 0,
)
