load("@gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@npm//:defs.bzl", "npm_link_all_packages")
load("@pip//:requirements.bzl", "all_whl_requirements")
load("@rules_multirun//:defs.bzl", "multirun")
load("@rules_python_gazelle_plugin//manifest:defs.bzl", "gazelle_python_manifest")
load("@rules_python_gazelle_plugin//modules_mapping:def.bzl", "modules_mapping")

# gazelle:exclude .venv
# gazelle:exclude target

load("@rules_uv//uv:pip.bzl", "pip_compile")

platform(
    name = "linux_amd64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    visibility = ["//visibility:public"],
)

platform(
    name = "linux_arm64",
    constraint_values = [
        "@platforms//os:linux",
        "@platforms//cpu:arm64",
    ],
    visibility = ["//visibility:public"],
)

pip_compile(
    name = "generate_requirements_txt",
    args = [
        "--all-extras",
        "--no-emit-package galadril-inference",
        "--no-emit-package galadril-pipeline",
    ],
    requirements_in = "//:pyproject.toml",
    requirements_txt = "//:requirements.txt",
)

modules_mapping(
    name = "modules_map",
    include_stub_packages = True,
    wheels = all_whl_requirements,
)

gazelle_python_manifest(
    name = "gazelle_python_manifest",
    modules_mapping = ":modules_map",
    pip_repository_name = "pip",
    requirements = "//:requirements.txt",
)

gazelle_binary(
    name = "gazelle_multilang",
    languages = [
        "@gazelle//language/proto",
        "@rules_python_gazelle_plugin//python",
    ],
)

gazelle(
    name = "gazelle",
    gazelle = ":gazelle_multilang",
)

multirun(
    name = "all",
    commands = [
        "//services/gateway:gateway",
        "//services/intake:intake",
        "//platform/vision/src/galadril_vision:vision",
    ],
    jobs = 0,
)

multirun(
    name = "push",
    commands = [
        "//services/intake:push",
        "//platform/vision/src/galadril_vision:push",
    ],
    jobs = 0,
)

npm_link_all_packages(name = "node_modules")
