[workspace]
resolver = "3"
members = [
    "machine-learning/scribe",
    "services/intake",
    "services/gateway",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = ""
repository = "https://github.com/RealHinome/Galadril"

[workspace.dependencies]
tokio = "1"
serde = "1"
anyhow = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false
