[project]
name = "galadril"
version = "0.1.0"
description = "All Galadril services."
dependencies = [
    "numpy>=1.26.0",
    "opentelemetry-api>=1.39.1",
    "opentelemetry-exporter-otlp>=1.39.1",
    "opentelemetry-sdk>=1.39.1",
    "structlog>=25.5.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.24.2",
    "boto3>=1.35",
    "boto3-stubs[s3]",
    "moto[s3]>=5.0",
    "galadril-inference",
    "galadril-pipeline",
    "daft[ray,iceberg]>=0.7.3",
    "ray[default]>=2.53",
    "confluent-kafka[avro,json,schema-registry]>=2.13",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "orjson>=3.10",
    "pyyaml>=6.0",
    "duckdb>=1.5",
    "huggingface-hub>=0.20.0",
    "torch>=2.0.0",
    "transformers>=5.4.0",
    "accelerate>=1.13.0",
    "torchvision>=0.26.0",
    "pyannote-audio>=4.0.4",
]
requires-python = "==3.13.*"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
galadril-inference = { workspace = true }
galadril-pipeline = { workspace = true }
timesfm = { git = "https://github.com/google-research/timesfm.git" }

[tool.uv.workspace]
members = [
    "machine-learning/galadril-inference",
    "platform/*",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "opencv-python-headless>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
