[project]
name = "galadril"
version = "0.1.0"
description = "All Galadril services."
dependencies = [
    "accelerate>=1.13.0",
    "boto3>=1.42.95",
    "confluent-kafka[avro,json,schema-registry]>=2.14.0",
    "daft[ray,iceberg]>=0.7.9",
    "duckdb>=1.5.2",
    "faster-whisper>=1.2.1",
    "gliner2>=1.3.0",
    "huggingface-hub>=1.11.0",
    "insightface>=0.7.3",
    "instructor>=1.15.1",
    "librosa>=0.11.0",
    "moto[s3]>=5.1.22",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
    "onnxruntime>=1.25.0",
    "opentelemetry-api>=1.41.0",
    "opentelemetry-exporter-otlp>=1.41.0",
    "opentelemetry-sdk>=1.41.0",
    "orjson>=3.11.8",
    "outlines>=1.2.12",
    "pgvector>=0.4.2",
    "psycopg[binary,pool]>=3.3.3",
    "pyannote-audio>=4.0.4",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyyaml>=6.0.3",
    "ray[default]>=2.53.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "structlog>=25.5.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.6.2",
    "wespeakerruntime>=1.0.1",
    "mypy-boto3-s3>=1.42",
]
requires-python = "==3.13.*"

[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux' and platform_machine == 'aarch64'",
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
eru = { workspace = true }
galadril-inference = { workspace = true }
galadril-pipeline = { workspace = true }
timesfm = { git = "https://github.com/google-research/timesfm.git" }

[tool.uv.workspace]
members = [
    "machine-learning/galadril-inference",
    "machine-learning/eru",
    "platform/*",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "opencv-python-headless>=4.0.0",
    "pytest>=8.0.0",
    "ruff>=0.15.2",
]

[tool.ruff]
target-version = "py312"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
ignore_missing_imports = true
