[project]
name = "galadril-inference"
version = "0.1.0"
description = "ML inference library for the Galadril platform."
requires-python = ">=3.13"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.24.2",
    "boto3>=1.35",
    "boto3-stubs[s3]",
    "moto[s3]>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "opencv-python-headless>=4.13.0.92",
]
