[project]
name = "galadril-inference"
version = "0.1.0"
description = "ML inference library for the Galadril platform."
requires-python = ">=3.13"
dependencies = [
    "insightface>=0.7.3",
    "onnxruntime>=1.24.2",
    "boto3>=1.35",
    "boto3-stubs[s3]",
    "moto[s3]>=5.0",
    "huggingface-hub>=0.20.0",
    "torch>=2.0.0",
    "transformers>=5.4.0",
    "accelerate>=1.13.0",
    "torchvision>=0.26.0",
    "pyannote-audio>=4.0.4",
    "faster-whisper>=1.2.1",
    "wespeakerruntime>=1.0.1",
    "librosa>=0.11.0",
    "scipy>=1.9.0",
    "scikit-learn>=1.0.0",
]

[tool.uv.sources]
timesfm = { git = "https://github.com/google-research/timesfm.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "opencv-python-headless>=4.0.0",
    "pytest>=8.0.0",
    "soundfile>=0.13.1",
]
