[package]
name = "scribe"
description = "Automatic technical writer of Galadril."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[example]]
name = "tikz"

[dependencies]
ollama-rs = { version = "0.3", features = ["tokio", "tool-implementations", "macros"] }
schemars = "1.2"
url = "2.5"
tectonic = { version = "0.15", features = ["external-harfbuzz"] }
tera = "1.20"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
