[project]
name = "vision"
version = "0.1.0"
description = "Galadril Vision, AI pipeline."
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "galadril-inference",
    "daft[ray,iceberg]>=0.7.3",
    "ray[default]>=2.52",
    "confluent-kafka[avro,json,schema-registry]>=2.13",
    "psycopg[binary,pool]>=3.2",
    "pgvector>=0.3",
    "boto3>=1.35",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "structlog>=24.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "testcontainers[kafka,postgres]>=4.0",
]

[tool.uv.sources]
galadril-inference = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/galadril_vision"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
