load("@crates//:defs.bzl", "aliases", "all_crate_deps")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_test")

rust_binary(
    name = "intake",
    srcs = glob(["src/**/*.rs"]),
    aliases = aliases(),
    compile_data = [
        "//schemas:avro_schema",
    ],
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    visibility = ["//visibility:public"],
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_test(
    name = "intake_test",
    crate = ":intake",
    deps = all_crate_deps(normal_dev = True),
)

pkg_tar(
    name = "layer",
    srcs = [":intake"],
)

oci_image(
    name = "linux",
    base = "@distroless_cc",
    entrypoint = ["/intake"],
    tars = [":layer"],
)

oci_image_index(
    name = "images",
    images = [
        ":linux",
    ],
)

oci_push(
    name = "push",
    image = ":images",
    remote_tags = [
        "latest",
    ],
    repository = "ghcr.io/realhinome/galadril-intake",
    visibility = ["//visibility:public"],
)
