[package]
name = "intake"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.123"
rdkafka = { version = "0.39", features = ["tokio"] }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
