[package]
name = "intake"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.123"
rdkafka = { version = "0.39", features = ["tokio"] }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1"
apache-avro = { version = "0.21", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.21", features = ["v4"] }
anyhow = { workspace = true }
csv = "1.4"