[package]
name = "intake"
version = "0.1.1"
edition = "2024"

[dependencies]
aws-config = { version = "1.8", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.127"
rdkafka = { version = "0.39", features = ["tokio"] }
schema_registry_converter = { version = "4.8", features = ["avro", "blocking"] }
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1"
serde_yaml = "0.9"
apache-avro = { version = "0.21", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.22", features = ["v4"] }
anyhow = { workspace = true }
csv = "1.4"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
