load("@rules_python//python:defs.bzl", "py_binary", "py_library")

# gazelle:exclude face_recognition.py

py_binary(
    name = "weather",
    srcs = ["weather.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference",
        "//machine-learning/galadril-inference/src/galadril_inference/storage",
    ],
)

py_library(
    name = "examples",
    srcs = ["weather.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference",
        "//machine-learning/galadril-inference/src/galadril_inference/storage",
    ],
)
