load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "galadril_inference",
    srcs = ["__init__.py"],
    imports = [".."],
    visibility = ["//machine-learning/galadril-inference/src:__subpackages__"],
    deps = ["//machine-learning/galadril-inference/src/galadril_inference/core"],
)
