load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_pkg//:pkg.bzl", "pkg_tar")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "galadril_vision",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    imports = [".."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference",
        "//machine-learning/galadril-inference/src/galadril_inference/storage",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/pipeline",
        "@pip//structlog",
    ],
)

py_binary(
    name = "vision_service",
    srcs = ["main.py"],
    imports = [".."],
    main = "main.py",
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference",
        "//machine-learning/galadril-inference/src/galadril_inference/storage",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/pipeline",
        "@pip//structlog",
    ],
)

pkg_tar(
    name = "layer",
    srcs = [":vision_service"],
    strip_prefix = ".",
)

oci_image(
    name = "linux",
    base = "@distroless_py",
    entrypoint = ["/platform/vision/src/galadril_vision/vision_service"],
    tars = [":layer"],
)

oci_image_index(
    name = "images",
    images = [
        ":linux",
    ],
)

oci_push(
    name = "push",
    image = ":images",
    remote_tags = [
        "latest",
    ],
    repository = "ghcr.io/realhinome/galadril-vision",
    visibility = ["//visibility:public"],
)
