load("@aspect_rules_py//py:defs.bzl", "py_image_layer")
load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_oci//oci:defs.bzl", "oci_image", "oci_image_index", "oci_push")
load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "galadril_vision",
    srcs = [
        "__init__.py",
        "main.py",
    ],
    imports = [".."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "//platform/pipeline/src/galadril_pipeline",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/pipeline",
        "@pip//structlog",
    ],
)

py_binary(
    name = "vision",
    srcs = ["main.py"],
    imports = [".."],
    main = "main.py",
    visibility = ["//visibility:public"],
    deps = [
        "//platform/pipeline/src/galadril_pipeline",
        "//platform/vision/src/galadril_vision/common",
        "//platform/vision/src/galadril_vision/pipeline",
        "@pip//structlog",
    ],
)

py_image_layer(
    name = "vision_layers",
    binary = ":vision",
)

oci_image(
    name = "linux",
    base = "@python_base",
    entrypoint = ["/platform/vision/src/galadril_vision/vision"],
    tars = [":vision_layers"],
)

platform_transition_filegroup(
    name = "image_amd64",
    srcs = [":linux"],
    target_platform = "//:linux_amd64",
)

platform_transition_filegroup(
    name = "image_arm64",
    srcs = [":linux"],
    target_platform = "//:linux_arm64",
)

oci_image_index(
    name = "images",
    images = [
        ":image_amd64",
        ":image_arm64",
    ],
)

oci_push(
    name = "push",
    image = ":images",
    remote_tags = [
        "latest",
    ],
    repository = "ghcr.io/realhinome/galadril-vision",
    visibility = ["//visibility:public"],
)
