load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "base.py",
        "face_recognition.py",
        "gliner.py",
        "got_ocr.py",
        "grounded_sam.py",
        "owl.py",
        "siglip.py",
        "time_series.py",
        "whisper.py",
    ],
    imports = ["../.."],
    visibility = ["//machine-learning/galadril-inference/src:__subpackages__"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference/common",
        "@pip//faster_whisper",
        "@pip//gliner2",
        "@pip//huggingface_hub",
        "@pip//insightface",
        "@pip//librosa",
        "@pip//numpy",
        "@pip//onnxruntime",
        "@pip//pillow",
        "@pip//scikit_learn",
        "@pip//scipy",
        "@pip//structlog",
        "@pip//torch",
        "@pip//torchvision",
        "@pip//transformers",
        "@pip//wespeakerruntime",
    ],
)
