load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "base.py",
        "eru.py",
        "face_recognition.py",
        "got_ocr.py",
        "grounded_sam.py",
        "owl.py",
        "siglip.py",
        "time_series.py",
        "whisper.py",
    ],
    imports = ["../.."],
    visibility = ["//machine-learning/galadril-inference/src:__subpackages__"],
    deps = [
        "//machine-learning/eru/src/eru",
        "//machine-learning/eru/src/eru/extractor",
        "//machine-learning/eru/src/eru/logic",
        "//machine-learning/eru/src/eru/reasoner",
        "//machine-learning/galadril-inference/src/galadril_inference/common",
        "@pip//faster_whisper",
        "@pip//gliner",
        "@pip//huggingface_hub",
        "@pip//insightface",
        "@pip//librosa",
        "@pip//numpy",
        "@pip//onnxruntime",
        "@pip//outlines",
        "@pip//pillow",
        "@pip//pydantic",
        "@pip//scikit_learn",
        "@pip//scipy",
        "@pip//structlog",
        "@pip//torch",
        "@pip//torchvision",
        "@pip//transformers",
        "@pip//wespeakerruntime",
    ],
)
