load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "storage",
    srcs = [
        "__init__.py",
        "local.py",
        "s3.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = [
        "//machine-learning/galadril-inference/src/galadril_inference/common",
        "//machine-learning/galadril-inference/src/galadril_inference/loading",
        "@pip//boto3",
        "@pip//boto3_stubs",
        "@pip//mypy_boto3_s3",
        "@pip//structlog",
    ],
)
