load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "models",
    srcs = [
        "__init__.py",
        "connectors.py",
        "pipeline.py",
        "sources.py",
    ],
    imports = ["../.."],
    visibility = ["//visibility:public"],
    deps = ["@pip//pydantic"],
)
