load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "common",
    srcs = [
        "__init__.py",
        "config.py",
        "exceptions.py",
        "types.py",
    ],
    imports = ["../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "@pip//pydantic",
        "@pip//pydantic_settings",
    ],
)
