load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "config",
    srcs = [
        "__init__.py",
        "loader.py",
        "schema.py",
    ],
    imports = ["../.."],
    visibility = ["//platform/vision/src:__subpackages__"],
    deps = [
        "@pip//pydantic",
        "@pip//pyyaml",
    ],
)
